syntax = "proto3";

package envoy.api.v2.listener;

option java_outer_classname = "LdsProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.api.v2";

option java_generic_services = true;

import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

message UdpListenerConfig {
  // Used to look up UDP listener factory, matches one of the implementation of
  // Server::ActiveUdpListenerConfigFactory::name().
  // If not specified, treat as "raw_udp_listener".
  string udp_listener_name = 1;

  // Used to create a specific listener factory. To some factory, i.e.
  // Server::ActiveRawUdpListenerFactory, config is not needed.
  oneof config_type {
    google.protobuf.Struct config = 2;

    google.protobuf.Any typed_config = 3;
  }
}
